--- a/src/app/partners/add-partners/add-partners.component.css
+++ b/src/app/partners/add-partners/add-partners.component.css
@@ -137,3 +137,6 @@
 .table{
 	margin-bottom: 13px;
 }
+h5{
+	font-weight: 600;
+}
