--- a/src/app/util/team-member-filter-option/team-member-filter-option.component.css
+++ b/src/app/util/team-member-filter-option/team-member-filter-option.component.css
@@ -5,3 +5,6 @@
     margin-right: 0px !important;
     margin-top: 2px !important;
 }
+.mix-filter{
+	margin: 0 0 -4px 0;
+}
